# fastMVC

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE.md  app.py  check_coverage.py  install_packages.sh  pyproject.toml  requirements.txt  setup.py  start_utils.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  pr-check.yml  publish.yml  release.yml
abstractions/: repository.py
controllers/user/: __init__.py
fastmvc_admin/: README.md  pyproject.toml
fastmvc_admin/src/fastmvc_admin/: __init__.py  abstractions.py  router.py
fastmvc_admin/tests/: test_init.py
fastmvc_analytics/: README.md  pyproject.toml
fastmvc_analytics/src/fastmvc_analytics/: __init__.py  base.py  http_sink.py
fastmvc_analytics/tests/: test_init.py
fastmvc_cli/: __init__.py  cli.py  entity_generator.py  generator.py
fastmvc_db/: README.md  pyproject.toml
fastmvc_db/src/fastmvc_db/: __init__.py  dependency.py  engine.py  table.py  url.py
fastmvc_db/tests/: __init__.py  test_init.py
fastmvc_feature_flags/: README.md  pyproject.toml
fastmvc_feature_flags/src/fastmvc_feature_flags/: __init__.py  base.py  launchdarkly_client.py  unleash_client.py
fastmvc_feature_flags/tests/: test_init.py
fastmvc_identity/: README.md  pyproject.toml
fastmvc_identity/src/fastmvc_identity/: __init__.py  providers.py
fastmvc_identity/tests/: test_init.py
fastmvc_jobs/: README.md  pyproject.toml
fastmvc_jobs/src/fastmvc_jobs/: __init__.py  celery_app.py
fastmvc_jobs/tests/: test_init.py
fastmvc_llm/: README.md  pyproject.toml
fastmvc_llm/src/fastmvc_llm/: __init__.py
fastmvc_llm/tests/: test_init.py
fastmvc_media/: README.md  pyproject.toml
fastmvc_media/src/fastmvc_media/: __init__.py  abstractions.py  upload.py  variants.py
fastmvc_media/tests/: test_init.py
fastmvc_payments/: README.md  pyproject.toml
fastmvc_payments/src/fastmvc_payments/: __init__.py  base.py  config.py  dto.py
fastmvc_payments/tests/: test_init.py
fastmvc_queues/: README.md  pyproject.toml
fastmvc_queues/src/fastmvc_queues/: __init__.py
fastmvc_queues/tests/: test_init.py
fastmvc_search/: README.md  pyproject.toml
fastmvc_search/src/fastmvc_search/: __init__.py  base.py  meilisearch_backend.py  opensearch_backend.py  typesense_backend.py
fastmvc_search/tests/: test_init.py
fastmvc_secrets/: README.md  pyproject.toml
fastmvc_secrets/src/fastmvc_secrets/: __init__.py  aws_backend.py  base.py  gcp_backend.py  vault_backend.py
fastmvc_secrets/tests/: test_init.py
fastmvc_storage/: README.md  pyproject.toml
fastmvc_storage/src/fastmvc_storage/: __init__.py  azure_backend.py  base.py  gcs_backend.py  local_backend.py  s3_backend.py
fastmvc_storage/tests/: test_init.py
fastmvc_tenancy/: README.md  pyproject.toml
fastmvc_tenancy/src/fastmvc_tenancy/: __init__.py  context.py  middleware.py
fastmvc_tenancy/tests/: test_init.py
fastmvc_vectors/: README.md  pyproject.toml
fastmvc_vectors/src/fastmvc_vectors/: __init__.py  base.py  pinecone_backend.py  qdrant_backend.py  weaviate_backend.py
fastmvc_vectors/tests/: test_init.py
fastmvc_webhooks/: README.md  pyproject.toml
fastmvc_webhooks/src/fastmvc_webhooks/: __init__.py  delivery.py  signing.py
fastmvc_webhooks/tests/: test_init.py
middlewares/: README.md  authetication.py  request_context.py
scripts/: release_all.sh
services/user/: login.py  logout.py  registration.py
tests/unit/controllers/: test_user_logout_controller.py  test_user_register_controller.py
tests/unit/middlewares/: test_middlewares.py
tests/unit/repositories/: test_product_repository.py
tests/unit/services/: test_product_crud_service.py  test_user_services.py
