[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmvc"
version = "1.0.0"
description = "Production-grade MVC Framework for FastAPI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FastMVC Team", email = "team@fastmvc.dev"}
]
maintainers = [
    {name = "FastMVC Team", email = "team@fastmvc.dev"}
]
keywords = ["fastapi", "mvc", "framework", "api", "rest", "web", "backend", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "redis>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "email-validator>=2.0.0",
    "ulid>=1.1",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/fastmvc/fastmvc"
Documentation = "https://fastmvc.dev/docs"
Repository = "https://github.com/fastmvc/fastmvc"
Issues = "https://github.com/fastmvc/fastmvc/issues"
Changelog = "https://github.com/fastmvc/fastmvc/blob/main/CHANGELOG.md"

[project.scripts]
fastmvc = "fastmvc_cli.cli:main"

[tool.setuptools]
packages = ["fastmvc_cli", "abstractions", "configurations", "constants", "constants.db", "controllers", "controllers.apis", "controllers.apis.v1", "controllers.user", "dependencies", "dependencies.repositiories", "dependencies.services", "dependencies.services.user", "dependencies.utilities", "dtos", "dtos.configurations", "dtos.requests", "dtos.requests.user", "dtos.responses", "errors", "middlewares", "models", "repositories", "services", "services.apis", "services.apis.v1", "services.user", "utilities"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yml", "*.yaml", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "htmlcov/*", "venv/*", ".venv/*", "fastmvc_cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

