[project]
name = "fastmvc_identity"
version = "0.1.0"
description = "Identity provider abstractions and OAuth2/OIDC builders for FastMVC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmvc_core",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
oauth = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/your-org/fastmvc_identity"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
